syntax = "proto3";

import "buf/validate/validate.proto";

option go_package = "/protoc";

message LoginRequest {
  string username = 1 [(buf.validate.field).string.min_len = 6];
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
}

service AuthService {
  // Login to the system
  rpc Login(LoginRequest) returns (LoginResponse) {};
}
